hphp/hack/test/typecheck/instance_property_visibility.php
<?hh

final class Foo {
  private int $bar = 1;
}

function baz(): void {
    $foo = new Foo();
    $foo->bar;
}
